--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,20 +8,26 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.btn1 {
+  background-color: red;
+  padding: 10px;
+  color: azure;
+  font-weight: bold;
+  border-radius: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn1:hover {
+  background-color: rgb(22, 19, 19);
 }
+.btn2:hover {
+  background-color: rgb(22, 19, 19);
+}
+
+.btn2 {
+  background-color: rgb(11, 18, 227);
+  padding: 10px;
+  color: azure;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
